updated cookie related settings